simple-nginx-edge-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-edge-service-public
spec:
  type: NodePort
  selector:
    app: nginx  
  ports:
  - name: http
    port: 80
    targetPort: 80  
    nodePort: 30062         
    protocol: TCP
