nginx-edge-ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nginx-edge-service-public
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - path: /echo
        backend:
          serviceName: nginx-edge-service
          servicePort: 80
